[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "zenhub/_version.py"

[tool.check-manifest]
ignore = ["zenhub/_version.py"]

[tool.black]
target-version = ['py38', 'py39', 'py310']
skip-string-normalization = true
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
skip_glob = []

[tool.mypy]
files = "zenhub"
ignore_missing_imports = true
exclude = [
  "tests",
]
plugins = [
  "pydantic.mypy"
]
show_error_codes = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
# disallow_any_generics = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
