[metadata]
name = pyzenhub
description = Python bindings to the Zenhub API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/goanpeca/pyzenhub
author = Gonzalo Pena-Castellanos
author_email = goanpeca@gmail.com
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
keywords = zenhub, api
project_urls =
    Source = https://github.com/goanpeca/pyzenhub
    Tracker = https://github.com/goanpeca/pyzenhub/issues
    Changelog = https://github.com/goanpeca/pyzenhub/blob/main/CHANGELOG.md

[options]
packages = find:
install_requires =
    packaging
    pydantic>=1.5.1
    requests
    types-requests
    typing_extensions
python_requires = >=3.8
include_package_data = True
setup_requires =
    setuptools-scm
zip_safe = False

[bdist_wheel]
universal=1

[flake8]
ignore = E203,W503,E501,C901,D401
max-line-length = 79
max-complexity = 18
